tileview spacing fix

--- a/src/app/tile-view/tile-view.component.css
+++ b/src/app/tile-view/tile-view.component.css
@@ -24,7 +24,6 @@
     height: max-content;
     display:flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     padding-bottom: 40px;
 }
 
